--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,56 @@ $RECYCLE.BIN/
 
 # Chroma DB storage
 chroma_storage/
+
+# Node.js dependencies
+node_modules/
+dist/
+.vite/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS or editor-specific files
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+
+# Build output
+/build/
+out/
+
+# Temporary files
+*.log
+*.tmp
+
+# Coverage files
+coverage/
+
+# FastAPI virtual environment (if applicable)
+venv/
+__pycache__/
+
+# Backend SQLite DB files
+*.sqlite3
+*.db
+
+# Python-related files
+*.pyc
+*.pyo
+*.pyd
+*.pytest_cache/
+
+# IDE configuration files
+*.iml
+
+# Other files you want to exclude
+/uploads/  # If you have an uploads folder for temporary PDF storage
